# BodyOutlineDelineation

./: BodyOutlineDelineation  BodyOutlineDelineation.cpp  BodyOutlineDelineation.md  CMakeLists.txt  README.md
Body/: BodyClass.h  BodyClassWrapper.cpp  BodyClassWrapper.h
